--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu:ital,wght@0,300;0,400;1,400;1,500&display=swap"
     rel="stylesheet">
-  <!--FAB -->
+  <!--Font Awesome -->
   <script src="https://kit.fontawesome.com/df510c3bec.js" crossorigin="anonymous"></script>
   <!-- css -->
   <link rel="stylesheet" href="css/styles.css">
-  <!-- bootstrap scripts -->
+  <!-- bootstrap scripts jquery -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
@@ -49,7 +49,7 @@
         </div>
       </nav>
 
-      <!-- Title and photo -->
+      <!-- Title and Top Picture -->
       <div class="row">
         <div class="col-lg-6">
           <h1>Meet new and interesting binge watchers nearby.</h1>
@@ -63,7 +63,7 @@
     </div>
   </section>
 
-  <!-- Features -->
+  <!-- Features 3-->
 
   <section id="features">
 
@@ -77,7 +77,7 @@
         <div class="col-lg-4 col-features">
           <i class="fas fa-filter fa-4x feature"></i>
           <h3>Elite Clientele</h3>
-          <p>Filter out the crowd according to your taste.</p>
+          <p>Filter out the crowd according to your taste and watchlist.</p>
         </div>
         <div class="col-lg-4 col-features feature">
           <i class="fas fa-heart fa-4x"></i>
@@ -93,24 +93,26 @@
   <section id="testimonials">
 
     <div class="container-fluid">
+      <!-- Carousel indicators at the bottom (2) -->
       <div id="CarouselControls" class="carousel slide" data-ride="false">
         <ol class="carousel-indicators">
           <li data-target="#Carousel-Controls" data-slide-to="0" class="active"></li>
           <li data-target="#Carousel-Controls" data-slide-to="1"></li>
-          <!-- <li data-target="#Carousel-Controls" data-slide-to="2"></li> -->
         </ol>
+        <!-- Carousel content (on-click) -->
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <h2 class="testimonial-text">"I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof."</h2>
+            <h2 class="testimonial-text">"I no longer have watch the 47566th re-run of F.R.I.E.N.D.S alone. I've found the coolest partner on TinFlix."</h2>
             <img class="testimonial-image" src="images/guy-square.jpg" alt="dog-profile">
-            <em>Pebbles, New York</em>
+            <em>Mumbai, India</em>
           </div>
           <div class="carousel-item">
-            <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
+            <h2 class="testimonial-text">I used to be so lonely, but TinFlix helped me find the true love of my life, SRK is his favourite actor too!</h2>
             <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-            <em>Beverly, Illinois</em>
+            <em>New Delhi, India</em>
           </div>
         </div>
+        <!-- Carousel buttons prev and next -->
         <a class="carousel-control-prev" href="#CarouselControls" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
@@ -129,7 +131,7 @@
 
   <section id="press">
     <div class="container-fluid">
-      <img class="brand-image" src="images/techcrunch.png" alt="tc-logo">
+      <img class="brand-image" src="images/TechCrunch.png" alt="tc-logo">
       <img class="brand-image" src="images/tnw.png" alt="tnw-logo">
       <img class="brand-image" src="images/bizinsider.png" alt="biz-insider-logo">
       <img class="brand-image" src="images/mashable.png" alt="mashable-logo">
@@ -141,13 +143,14 @@
 
   <section id="pricing">
 
-    <h2 class="pricing-text" style="font-size: 3rem;">A Plan for Every Dog's Needs</h2>
-    <p>Simple and affordable price plans for your and your dog.</p>
+    <h2 class="pricing-text" style="font-size: 3rem;">A Plan for Everyone's Needs</h2>
+    <p>Simple and affordable price plans for you to find your buddy without burning a hole in your pocket.</p>
+    <!-- Cards for Pricing (3), hover action -->
     <div class="row">
       <div class="col-lg-4 col-md-6 pricing-card">
         <div class="card main-card">
           <div class="card-header">
-            <h3 class="pricing-card-name">Chihuahua</h3>
+            <h3 class="pricing-card-name">Classic</h3>
           </div>
           <div class="card-body">
             <h2 class="pricing-text">Free</h2>
@@ -164,7 +167,7 @@
       <div class="col-lg-4 col-md-6 pricing-card">
         <div class="card main-card">
           <div class="card-header">
-            <h3 class="pricing-card-name">Labrador</h3>
+            <h3 class="pricing-card-name">Premium</h3>
           </div>
           <div class="card-body">
             <h2 class="pricing-text">₹99 / mo</h2>
@@ -182,7 +185,7 @@
 
         <div class="card main-card">
           <div class="card-header">
-            <h3 class="pricing-card-name">Mastiff</h3>
+            <h3 class="pricing-card-name">VIP</h3>
           </div>
           <div class="card-body">
             <h2 class="pricing-text">₹199 / mo</h2>
@@ -205,6 +208,7 @@
 
     <h2 class="cta-text">Find the True Love of Your Life Today.</h2>
     <h5>If they watch what you watch, they're the one for you.</h5>
+    <!-- Download buttons md -->
     <button type="button" class="btn btn-dark btn-md download-button"><i class="fab fa-apple"></i>Download</button>
     <button type="button" class="btn btn-outline-light btn-md download-button"><i class="fab fa-google-play"></i>Download</button>
 
@@ -217,7 +221,7 @@
     <i class="fab fa-facebook-f" style="padding: 1%;"></i>
     <i class="fab fa-instagram" style="padding: 1%;"></i>
     <i class="fas fa-envelope myenvelope" style="padding: 1%;"></i>
-    <p style="padding: 1.5%;">© Copyright 2021 Tinfliv</p>
+    <p style="padding: 1.5%; font-size: 0.9rem; font-weight: Bold;">© Copyright 2021 Tinflix</p>
 
   </footer>
 
