--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     rel="stylesheet">
   <!--Font Awesome -->
   <script src="https://kit.fontawesome.com/df510c3bec.js" crossorigin="anonymous"></script>
+  <!-- Favicon -->
+  <link rel="shortcut icon" href="images\favicon-TinFlix.ico">
   <!-- css -->
   <link rel="stylesheet" href="css/styles.css">
   <!-- bootstrap scripts jquery -->
@@ -24,9 +26,9 @@
 
 <body>
 
-  <section id="title">
+  <section id="title" class="coloured-section">
     <!-- Clubbing Navbar and title in one container-->
-    <div class="container-fluid-title">
+    <div class="container-fluid">
       <!-- Nav Bar -->
       <nav class="navbar navbar-expand-lg navbar-dark ">
         <a class="navbar-brand" href="">tinflix</a>
@@ -37,13 +39,13 @@
         <div class="collapse navbar-collapse" id="NavbarToggle">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="">Contact</a>
+              <a class="nav-link" href="#footer">Contact</a>
             </li>
             <li class="nav-item ">
-              <a class="nav-link" href="">Pricing</a>
+              <a class="nav-link" href="#pricing">Pricing</a>
             </li>
             <li class="nav-item ">
-              <a class="nav-link" href="">Download</a>
+              <a class="nav-link" href="#cta">Download</a>
             </li>
           </ul>
         </div>
@@ -52,7 +54,7 @@
       <!-- Title and Top Picture -->
       <div class="row">
         <div class="col-lg-6">
-          <h1>Meet new and interesting binge watchers nearby.</h1>
+          <h1 class="big-heading">Meet new and interesting binge watchers nearby.</h1>
           <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i>Download</button>
           <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i>Download</button>
         </div>
@@ -65,23 +67,23 @@
 
   <!-- Features 3-->
 
-  <section id="features">
+  <section id="features" class="white-section">
 
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-4 col-features">
           <i class="fas fa-check-circle fa-4x feature"></i>
-          <h3>Easy to use.</h3>
+          <h4 class="feature-text">Easy to use.</h4>
           <p>As easy to use as making popcorn.</p>
         </div>
         <div class="col-lg-4 col-features">
           <i class="fas fa-filter fa-4x feature"></i>
-          <h3>Elite Clientele</h3>
+          <h4 class="feature-text">Elite Clientele</h4>
           <p>Filter out the crowd according to your taste and watchlist.</p>
         </div>
         <div class="col-lg-4 col-features feature">
           <i class="fas fa-heart fa-4x"></i>
-          <h3>Guaranteed to work.</h3>
+          <h4 class="feature-text">Guaranteed to work.</h4>
           <p>Find the love of your life or get your money back.</p>
         </div>
       </div>
@@ -90,9 +92,9 @@
 
 
   <!-- Testimonials -->
-  <section id="testimonials">
+  <section id="testimonials" class="coloured-section">
 
-    <div class="container-fluid">
+    <!-- <div class="container-fluid"> -->
       <!-- Carousel indicators at the bottom (2) -->
       <div id="CarouselControls" class="carousel slide" data-ride="false">
         <ol class="carousel-indicators">
@@ -101,12 +103,12 @@
         </ol>
         <!-- Carousel content (on-click) -->
         <div class="carousel-inner">
-          <div class="carousel-item active">
+          <div class="carousel-item active container-fluid">
             <h2 class="testimonial-text">"I no longer have watch the 47566th re-run of F.R.I.E.N.D.S alone. I've found the coolest partner on TinFlix."</h2>
             <img class="testimonial-image" src="images/guy-square.jpg" alt="dog-profile">
             <em>Mumbai, India</em>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item container-fluid">
             <h2 class="testimonial-text">I used to be so lonely, but TinFlix helped me find the true love of my life, SRK is his favourite actor too!</h2>
             <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
             <em>New Delhi, India</em>
@@ -122,14 +124,14 @@
           <span class="sr-only">Next</span>
         </a>
       </div>
-    </div>
+    <!-- </div> -->
 
   </section>
 
 
   <!-- Press -->
 
-  <section id="press">
+  <section id="press" class="coloured-section">
     <div class="container-fluid">
       <img class="brand-image" src="images/TechCrunch.png" alt="tc-logo">
       <img class="brand-image" src="images/tnw.png" alt="tnw-logo">
@@ -141,7 +143,9 @@
 
   <!-- Pricing -->
 
-  <section id="pricing">
+  <section id="pricing" class="white-section">
+<div class="container-fluid">
+
 
     <h2 class="pricing-text" style="font-size: 3rem;">A Plan for Everyone's Needs</h2>
     <p>Simple and affordable price plans for you to find your buddy without burning a hole in your pocket.</p>
@@ -199,30 +203,35 @@
         </div>
       </div>
     </div>
+    </div>
   </section>
 
 
   <!-- Call to Action -->
 
-  <section id="cta">
+  <section id="cta" class="coloured-section">
+    <div class="container-fluid">
 
     <h2 class="cta-text">Find the True Love of Your Life Today.</h2>
     <h5>If they watch what you watch, they're the one for you.</h5>
     <!-- Download buttons md -->
     <button type="button" class="btn btn-dark btn-md download-button"><i class="fab fa-apple"></i>Download</button>
     <button type="button" class="btn btn-outline-light btn-md download-button"><i class="fab fa-google-play"></i>Download</button>
-
+  </div>
   </section>
 
   <!-- Footer -->
 
-  <footer id="footer">
+  <footer id="footer" class="white-section">
+    <div class="container-fluid">
+
     <i class="fab fa-twitter" style="padding: 1%;"></i>
     <i class="fab fa-facebook-f" style="padding: 1%;"></i>
     <i class="fab fa-instagram" style="padding: 1%;"></i>
     <i class="fas fa-envelope myenvelope" style="padding: 1%;"></i>
-    <p style="padding: 1.5%; font-size: 0.9rem; font-weight: Bold;">© Copyright 2021 Tinflix</p>
+    <p class="footer-text">© Copyright 2021 Tinflix</p>
 
+    </div>
   </footer>
 
 
